--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^4.3.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   }
 }
